Fixing overflow responsive

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 /* Raw Tags */
 body {
   background-color: white;
+  overflow-x: hidden;
 }
 
 a {
@@ -49,7 +50,7 @@ footer {
 
 /* Header Content */
 .head {
-  height: 95vh;
+  height: 100vh;
   background-image: url(images/Header\ Background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -88,7 +89,7 @@ nav {
 /* Icon and Regards */
 .name-chara {
   width: 100%;
-  height: 95vh;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -136,15 +137,14 @@ nav {
 
 .chara {
   display: flex;
-  height: 100vh;
   align-items: flex-end;
+  height: 100%;
 }
 
 .gab {
   position: relative;
   height: 600px;
   left: -30px;
-  overflow-x: hidden;
 }
 
 .github,
@@ -432,7 +432,7 @@ nav {
 
   .gab {
     height: 250px;
-    left: 100px;
+    transform: translateX(90px);
   }
 
   /* About */
@@ -536,12 +536,12 @@ nav {
 
   .card-text p {
     font-size: 9px;
-    margin-top: 5px;
+    margin-top: 3px;
   }
 
   .card-btn {
     margin-top: 15px;
-    font-size: 9.5px;
+    font-size: 9px;
     height: 16px;
   }
 
@@ -572,12 +572,13 @@ nav {
   }
 
   .card1 .card-text p {
-    font-size: 10px;
+    font-size: 9px;
     margin: 5px 9px 0 0;
+    width: 80%;
   }
 
   .card1 .card-btn {
-    margin-top: 5px;
+    margin-top: 8px;
     height: 16px;
   }
 
